--- a/uncertainty_water_area.Rmd
+++ b/uncertainty_water_area.Rmd
@@ -61,7 +61,8 @@ loadPackages(c("data.table", "ggplot2", "sensobol", "scales",
                "dplyr", "IDPmisc", "boot", "parallel", 
                "MASS", "doParallel", "complmrob", 
                "mvoutlier", "sandwich", "lmtest", "mice", 
-               "ggridges", "broom", "naniar", "cowplot"))
+               "ggridges", "broom", "naniar", "cowplot", 
+               "tidyr", "benchmarkme"))
 
 # SET CHECKPOINT --------------------------------------------------------------
 
@@ -160,6 +161,7 @@ In the next code chunk we read in all these datasets, clean them and merge them 
 # FAO data (Table 4) ----------------------------
 # http://www.fao.org/nr/water/aquastat/water_use_agr/IrrigationWaterUse.pdf
 
+# UNIT IS KM3/YEAR
 table4.tmp <- fread("table_4.csv", skip = 3, nrows = 167) %>%
   .[, .(Country, Year, Water.withdrawal)] %>%
   setnames(., "Water.withdrawal", "Water.Withdrawn")
@@ -170,6 +172,7 @@ table4.dt <- country_code(table4.tmp[Year %in% 1999:2012])[
     , Year:= NULL]
 
 # Liu et al. dataset ----------------------------
+#UNIT IS 10^9 m3/year = km3/year
 liu.dt <- fread("liu.csv")[, .(country, irr)] %>%
   setnames(., c("country", "irr"), c("Country", "Water.Withdrawn")) %>%
   country_code(.) %>%
@@ -191,9 +194,8 @@ Not all irrigation water withdrawal datasets provide measurements for the same c
 
 # ARRANGE THE TOTAL NUMBER OF COUNTRIES ---------------------------------------
 
-# Check how many different countries there are in the water datasets
-DT <- data.table(unique(c(liu.dt[, Country], GHM.dt[, Country], table4.dt[, Country])))
-setnames(DT, "V1", "Country")
+# Read in list of countries in UN
+DT <- fread("UN_countries2.csv", select = "Country")
 
 # Give standard country names, UN codes and link with Continent
 DT <- DT[, `:=` (Code = countrycode(DT[, Country], 
@@ -203,9 +205,8 @@ DT <- DT[, `:=` (Code = countrycode(DT[, Country],
                                          origin = "country.name", 
                                          destination ="continent"))]
 
-DT <- DT[, Country:= countrycode(DT[, Code], 
-                                 origin = "un", 
-                                 destination = "country.name")]
+# Manually add Micronesia
+DT <- DT[, Continent:= ifelse(Country %in% "Micronesia", "Oceania", Continent)]
 ```
 
 ```{r final_water_dataset, cache=TRUE, dependson=c("water_with_dataset" ,"arrange_total_countries")}
@@ -268,9 +269,16 @@ irrigated.dt <- melt(meier.dt, measure.vars = irrigated.area.datasets) %>%
             all.y = TRUE), by = variable] %>%
   setnames(., c("variable", "value"), c("Area.Dataset", "Irrigated.Area"))
 
-full.dt <- merge(irrigated.dt, water.dt, on = c("Continent", "Country", "Code"), 
-                 allow.cartesian = TRUE) %>%
+tmp.dt <- merge(irrigated.dt, water.dt, on = c("Continent", "Country", "Code"), 
+                allow.cartesian = TRUE) %>%
   .[!Continent == "Oceania"] # Drop Oceania
+
+# Vector with the countries to drop
+countries.drop <- tmp.dt[Water.Withdrawn == 0 & is.na(Irrigated.Area) == TRUE] %>%
+  .[, unique(Country)]
+
+# Drop the countries
+full.dt <- tmp.dt[!Country %in% countries.drop]
 ```
 
 ```{r export.irrigated.dt, cache=TRUE, dependson="merge_with_area"}
@@ -343,6 +351,7 @@ for(i in names(tmp)) {
           strip.text = element_text(size = 7)) +
     ggtitle(names(tmp[i]))
 }
+
 gg
 ```
 
@@ -447,7 +456,7 @@ There are several methods to impute missing values, each with its specificities.
 
 ```{r missing_values, cache=TRUE, dependson="log10", echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 
-# IMPUTATION OF MISSING VALUES ------------------------------------------------
+# IMPUTATION OF MISSING VALUES -------------------------------------------------
 
 # Substitute Inf values for NA
 for (j in 1:ncol(full.dt)) set(full.dt, which(is.infinite(full.dt[[j]])), j, NA)
@@ -465,11 +474,11 @@ imput <- full.dt[, .(Group = lapply(imputation.methods, function(x)
        print = FALSE))), 
   cols_group]
 
-imput <- imput[, Imputation.Method:= rep(imputation.methods, .N / 3)]
+imput <- imput[, Imputation.Method:= rep(imputation.methods, .N / length(imputation.methods))]
 
 # Extract iterations
 imput <- imput[, Datasets:= lapply(Group, function(x) 
-  lapply(1:m.iterations, function(y) data.table(complete(x, y))))] %>%
+  lapply(1:m.iterations, function(y) data.table(mice::complete(x, y))))] %>%
   .[, Data:= lapply(Datasets, function(x) rbindlist(x, idcol = "Iteration"))]
 
 # Vector to loop onto
@@ -521,6 +530,7 @@ final.resid <- rbind(resid.dt, resid.dtR)
 ```{r plot_residuals, cache=TRUE, dependson="conduct_lm", fig.height=8, fig.width=6, warning=FALSE}
 
  # PLOT RESIDUALS -------------------------------------------------------------
+
 # function to plot
 gg_bar <- gg_ridge <- list()
 for(i in c("Africa", "Americas", "Asia", "Europe")) {
@@ -561,6 +571,7 @@ gg_ridge
 # EXPORT FULL DATASET WITHOUT MISSING VALUES --------------------------------------------
 
 fwrite(full.imput, "full.imput.csv")
+
 ```
 
 # Compute all possible beta values
@@ -569,15 +580,28 @@ fwrite(full.imput, "full.imput.csv")
 
 # COMPUTE BETA AND R^2 --------------------------------------------------------
 
-results <- full.imput[, .(Normal = coef(lm(Water.Withdrawn ~ Irrigated.Area))[[2]], 
-                          Robust = coef(rlm(Water.Withdrawn ~ Irrigated.Area, maxit = 60))[[2]], 
-                          r.squared = summary(lm(Water.Withdrawn ~ Irrigated.Area))$r.squared), 
-                      all.cols]
+regressions <- full.imput[, .(Normal = coef(lm(Water.Withdrawn ~ Irrigated.Area)), 
+                              Robust = coef(rlm(Water.Withdrawn ~ Irrigated.Area, maxit = 60)), 
+                              r.squared = summary(lm(Water.Withdrawn ~ Irrigated.Area))$r.squared), 
+                      all.cols] 
+
+results <- regressions[, Type:= rep(c("Intercept", "Beta"), times = nrow(.SD) / 2)] %>%
+  melt(., measure.vars = c("Normal", "Robust"), variable.name = "Regression") %>%
+  tidyr::spread(., Type, value) %>%
+  .[, index:= paste(Continent, Area.Dataset, Water.Dataset, Regression, 
+                   Imputation.Method, Iteration, sep = "_")]
+
 ```
 
 ```{r export_beta_results, cache=TRUE, dependson="compute_beta"}
 
 # EXPORT BETA AND R^2 RESULTS -------------------------------------------------
+
+results <- regressions[, Type:= rep(c("Intercept", "Beta"), times = nrow(.SD) / 2)] %>%
+  melt(., measure.vars = c("Normal", "Robust"), variable.name = "Regression") %>%
+  spread(., Type, value) %>%
+  .[, index:= paste(Continent, Area.Dataset, Water.Dataset, Regression, 
+                   Imputation.Method, Iteration, sep = "_")]
 
 fwrite(results, "results.csv")
 ```
@@ -590,12 +614,7 @@ Here we define the lookup table that we will use to select the $\beta$ value acc
 
 # CREATE LOOKUP TABLE ---------------------------------------------------------
 
-lookup <- melt(results, measure.vars = c("Normal", "Robust"), 
-     variable.name = "Regression", value.name = "Beta") %>%
-  .[, index:= paste(Continent, Area.Dataset, Water.Dataset, Regression, 
-                    Imputation.Method, Iteration, sep = "_")]
-
-lookup <- setkey(lookup, index)
+lookup <- setkey(results, index)
 
 # Export lookup
 fwrite(lookup, "lookup.csv")
@@ -614,11 +633,11 @@ Continents <- c("Africa", "Americas", "Asia", "Europe")
 # Create a vector with the name of the columns
 parameters <- paste("X", 1:5, sep = "")
 
-# Obtain number of parameters
-k <- length(parameters)
-
 # Select sample size
-n <- 2 ^ 14
+n <- 2 ^ 13
+
+# Define order
+order <- "third"
 ```
 
 ```{r sample_matrix, cache=TRUE, dependson="set_sample_matrix"}
@@ -627,10 +646,9 @@ n <- 2 ^ 14
 
 # Create an A, B and AB matrices for each continent
 sample.matrix <- lapply(Continents, function(Continents) 
-  sobol_matrices(n = n,
-                 k = k, 
-                 second = TRUE, 
-                 third = TRUE) %>%
+  sobol_matrices(N = n,
+                 params = parameters,
+                 order = order) %>%
     data.table())
 
 # Name the slots, each is a continent
@@ -699,7 +717,7 @@ The model is simply a one-line function that runs in the sample matrix as follow
 
 # THE MODEL -------------------------------------------------------------------
 
-model <- function(X) lookup[.(paste0(X[, 1:6], collapse = "_"))][, c(Beta, r.squared)]
+model <- function(X) lookup[.(paste0(X[, 1:6], collapse = "_"))][, c(Intercept, Beta, r.squared)]
 ```
 
 ```{r run_model, cache=TRUE, dependson=c("define_model", "set_boot", "lookup", "transform_sample_matrix")}
@@ -729,7 +747,7 @@ stopCluster(cl)
 # ARRANGE MODEL OUTPUT -------------------------------------------------------
 
 sample.matrix.dt <- cbind(sample.matrix.dt, data.table(do.call(rbind, Y))) %>%
-  setnames(., c("V1", "V2"), c("Y", "r.squared"))
+  setnames(., c("V1", "V2", "V3"), c("Intercept", "Beta", "r.squared"))
 
 # Select the A and B matrix only (for uncertainty analysis)
 AB.dt <- sample.matrix.dt[, .SD[1:(n * 2)], Continent]
@@ -743,44 +761,82 @@ fwrite(AB.dt, "AB.dt.csv")
 
 Here we plot the distribution of $\beta$ for each continent, and calculate the proportion of model runs with $\beta<1$ (sublinear regime; larger irrigated areas are more water efficient) and $\beta>1$ (superlinear regime, larger irrigated areas are less water efficient). The results suggest that there are almost 9/10 chances and 3/4 chances of larger irrigated areas in Asia and Europe being more water efficient than smaller ones. In the case of the Americas and Africa, the chances are 3.5/5 and 1/2 respectively.
 
-```{r plot_uncertainty, cache=TRUE, dependson="arrange_output", dev="tikz", fig.height=4, fig.width=7.5, fig.cap="Uncertainty in the model output. a) Uncertainty in the model goodness of fit. All sources of uncertainty have been taken into account except the selection between OLS and OLS robust (trigger X2). Robust OLS does not allow to compute $r^2$. b) Uncertainty in the slope."}
+```{r plot_uncertainty, cache=TRUE, dependson="arrange_output", dev="tikz", fig.height=4, fig.width=5, fig.cap="Uncertainty in the model output. a) Uncertainty in the model goodness of fit. All sources of uncertainty have been taken into account except the selection between OLS and OLS robust (trigger X2). Robust OLS does not allow to compute $r^2$. b) Uncertainty in the slope."}
 
 # PLOT UNCERTAINTY ------------------------------------------------------------
 
 # Plot r2
-a <- ggplot(AB.dt, aes(r.squared, fill = Continent)) + 
-  geom_density(alpha = 0.3) + 
+a <- ggplot(AB.dt, aes(r.squared)) + 
+  geom_histogram(color = "black", fill = "white") + 
   theme_AP() +
-  labs(x = expression(R ^ 2), 
+  labs(x = expression(r ^ 2), 
        y = "Density") +
-  theme(legend.position = "none")
+  scale_y_continuous(breaks = pretty_breaks(n = 3)) +
+  scale_x_continuous(breaks = pretty_breaks(n = 3)) +
+  facet_wrap(~Continent, ncol = 4) +
+  theme(panel.spacing.x = unit(4, "mm"))
 
 # Plot beta
-b <- ggplot(AB.dt, aes(Y, fill = Continent)) + 
-  geom_density(alpha = 0.3) + 
+b <- ggplot(AB.dt, aes(Beta)) + 
+  geom_histogram(color = "black", fill = "white") + 
   theme_AP() +
   geom_vline(xintercept = 1, 
-             lty = 2) +
+             lty = 2, 
+             color = "red") +
   labs(x = "$\\beta$", 
        y = "") +
-  theme(legend.position = "none")
+  scale_y_continuous(breaks = pretty_breaks(n = 3)) +
+  scale_x_continuous(breaks = pretty_breaks(n = 3)) +
+  facet_wrap(~Continent, ncol = 4) +
+  theme(panel.spacing.x = unit(4, "mm"))
 
-# Extract legend
-legend <- cowplot::get_legend(a + theme(legend.position = "top"))
 
 # Merge
-all <- plot_grid(a, b, ncol = 2, align = "hv", labels = "auto")
+plot_grid(a, b, ncol = 1, align = "hv", labels = "auto")
+```
 
-plot_grid(legend, all, ncol = 1, rel_heights = c(0.2, 1))
+```{r check_order_r2, cache=TRUE, dependson="arrange_output", fig.height=7, fig.width=4.5}
+
+# CHECK THE COMBINATIONS LEADING TO HIGHEST R2 VALUES (first 200) -------------
+
+# Check min and max of first 200 r.squared values
+AB.dt[order(-r.squared), head(.SD, 200), Continent][
+  , .(min = min(r.squared), max = max(r.squared)), Continent]
+
+# Create plot
+dd <- AB.dt[order(-r.squared), head(.SD, 200), Continent] %>%
+  .[, ID:= paste(X1, X2, X4, X5, sep = "_")] %>%
+  .[, .N, .(Continent, ID)]
+
+tmp <- split(dd, dd$Continent)
+gg <- list()
+for(i in names(tmp)) {
+  gg[[i]] <- ggplot(tmp[[i]], aes(reorder(ID, N), N)) +
+    geom_bar(stat = "identity", 
+             color = "black", 
+             fill = "white") + 
+    coord_flip() +
+    labs(y = expression(italic(N)), 
+         x = "") +
+    theme_AP() +
+    ggtitle(names(tmp[i]))
+}
+
+gg
 ```
 
 ```{r super_sub, cache=TRUE, dependson="arrange_output"}
 
 # SUPERLINEAR OR SUBLINEAR REGIME? --------------------------------------------
 
-AB.dt[, .(sublinear = sum(Y < 1, na.rm = TRUE) / .N, 
-          superlinear = sum(Y > 1, na.rm = TRUE) / .N), 
+AB.dt[, .(sublinear = sum(Beta < 1, na.rm = TRUE) / .N, 
+          superlinear = sum(Beta > 1, na.rm = TRUE) / .N), 
       Continent]
+
+AB.dt[, .(">90" = sum(r.squared > 0.9) / .N,
+            "75-90" = sum(r.squared > 0.75 & r.squared < 0.9) / .N, 
+            "50-75" = sum(r.squared > 0.50 & r.squared < 0.75) / .N, 
+            "25-50" = sum(r.squared > 0.25 & r.squared < 0.5) / .N), Continent]
 ```
 
 # Sensitivity analysis
@@ -791,18 +847,34 @@ Here we conduct the sensitivity analysis to appraise how much uncertainty in $\b
 
 # PLOT SCATTERPLOTS OF PARAMETERS VS MODEL OUTPUT -----------------------------
 
-scatter.dt <- melt(AB.dt, measure.vars = paste("X", 1:5, sep = "")) %>%
-  .[, Regime:= ifelse(Y > 1, "Super-linear", "Sub-linear")]
+AB.dt <- AB.dt[, X5:= factor(X5, levels = as.factor(1:m.iterations))]
 
-ggplot(scatter.dt, aes(value, Y, color = Regime)) +
+scatter.dt <- melt(AB.dt, measure.vars = paste("X", 1:5, sep = "")) %>%
+  .[, Regime:= ifelse(Beta > 1, "Super-linear", "Sub-linear")]
+
+# Beta
+ggplot(scatter.dt, aes(value, Beta, color = Regime)) +
   geom_point(alpha = 0.3, size = 0.5) +
-  facet_grid(Continent ~ variable, 
+  facet_grid(Continent ~ variable,
              scales = "free_x") +
-  geom_hline(yintercept = 1, 
+  geom_hline(yintercept = 1,
              lty = 2) +
   scale_color_manual(values = c("#00BFC4", "#F8766D")) +
   theme_AP() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+  labs(x = "", y = expression(beta)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "top")
+
+# R squared
+ggplot(scatter.dt, aes(value, r.squared, color = Regime)) +
+  geom_point(alpha = 0.3, size = 0.5) +
+  facet_grid(Continent ~ variable,
+             scales = "free_x") +
+  labs(x = "", 
+       y = expression(italic(r)^2)) +
+  scale_color_manual(values = c("#00BFC4", "#F8766D")) +
+  theme_AP() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
         legend.position = "top")
 ```
 
@@ -812,15 +884,6 @@ ggplot(scatter.dt, aes(value, Y, color = Regime)) +
 
 # Number of bootstrap replicas
 R <- 1000
-
-# Sensitivity estimator
-estimator <- "jansen"
-
-# Method to calculate ci
-type <- "norm"
-
-# Confidence interval
-conf <- 0.95
 ```
 
 ```{r sensitivity, cache=TRUE, dependson=c("arrange_output", "set_sample_matrix")}
@@ -828,118 +891,90 @@ conf <- 0.95
 # SENSITIVITY ANALYSIS --------------------------------------------------------
 
 # Beta
-indices <- sample.matrix.dt[, sobol_indices(Y, 
+indices <- sample.matrix.dt[, sobol_indices(Y = Beta, 
+                                            N = n,
                                             params = parameters, 
+                                            first = "jansen",
                                             R = R, 
-                                            n = n, 
-                                            type = estimator,
+                                            boot = TRUE,
                                             parallel = "multicore", 
                                             ncpus = n_cores, 
-                                            second = TRUE, 
-                                            third = TRUE), 
+                                            order = "third"), 
                             Continent]
 
 # r squared
-indicesR <- sample.matrix.dt[, sobol_indices(r.squared, 
+indicesR <- sample.matrix.dt[, sobol_indices(Y = r.squared, 
+                                             N = n,
                                              params = parameters, 
+                                             first = "jansen",
                                              R = R, 
-                                             n = n, 
-                                             type = estimator,
+                                             boot = TRUE,
                                              parallel = "multicore", 
                                              ncpus = n_cores, 
-                                             second = TRUE, 
-                                             third = TRUE), 
-                            Continent]
+                                             order = "third"), 
+                             Continent]
 
 # Compute Sobol' indices for the dummy parameter (Beta)
-indices.dummy <- sample.matrix.dt[, sobol_dummy(Y, 
+indices.dummy <- sample.matrix.dt[, sobol_dummy(Y = Beta, 
+                                                N = n,
                                                 params = parameters, 
                                                 R = R, 
-                                                n = n, 
+                                                boot = TRUE,
                                                 parallel = "multicore", 
                                                 ncpus = n_cores), 
                                   Continent]
 
 # Compute Sobol' indices for the dummy parameter (r squared)
-indices.dummyR <- sample.matrix.dt[, sobol_dummy(r.squared, 
+indices.dummyR <- sample.matrix.dt[, sobol_dummy(Y = r.squared, 
+                                                 N = n,
                                                  params = parameters, 
                                                  R = R, 
-                                                 n = n, 
+                                                 boot = TRUE,
                                                  parallel = "multicore", 
                                                  ncpus = n_cores), 
-                                  Continent]
+                                   Continent]
 ```
 
-```{r ci, cache=TRUE, dependson="sensitivity"}
 
-# COMPUTE CONFIDENCE INTERVALS -----------------------------------------------
-
-# Beta
-tmp <- split(indices, indices$Continent)
-ci <- list()
-for(i in names(tmp)) {
-  ci[[i]] <- sobol_ci(tmp[[i]], 
-                      params = parameters,
-                      type = type, 
-                      conf = conf, 
-                      second = TRUE, 
-                      third = TRUE)
-}
-
-ci <- rbindlist(ci, idcol = "Continent") 
-
-# r squared
-tmp <- split(indicesR, indicesR$Continent)
-ciR <- list()
-for(i in names(tmp)) {
-  ciR[[i]] <- sobol_ci(tmp[[i]], 
-                      params = parameters,
-                      type = type, 
-                      conf = conf, 
-                      second = TRUE, 
-                      third = TRUE)
-}
-
-ciR <- rbindlist(ciR, idcol = "Continent") 
-
-# Compute ci for the dummy parameter (Beta)
-tmp <- split(indices.dummy, indices.dummy$Continent)
-ci.dummy <- list()
-for(i in names(tmp)) {
-  ci.dummy[[i]] <- sobol_ci_dummy(tmp[[i]], 
-                                  type = type, 
-                                  conf = conf)
-}
-
-ci.dummy <- rbindlist(ci.dummy, idcol = "Continent")
-
-# Compute ci for the dummy parameter (r squared)
-tmp <- split(indices.dummyR, indices.dummyR$Continent)
-ci.dummyR <- list()
-for(i in names(tmp)) {
-  ci.dummyR[[i]] <- sobol_ci_dummy(tmp[[i]], 
-                                  type = type, 
-                                  conf = conf)
-}
-
-ci.dummyR <- rbindlist(ci.dummyR, idcol = "Continent")
-```
-
-```{r plot_sobol, cache=TRUE, dependson="ci", dev="tikz", fig.cap="Sobol' indices."}
+```{r plot_sobol, cache=TRUE, dependson="ci", dev="tikz", fig.cap="Sobol' indices.", fig.width = 5}
 
 # PLOT SOBOL' INDICES ---------------------------------------------------------
 
-a <- plot_sobol(ciR, type = 1, dummy = ci.dummyR) + 
-  facet_wrap(~Continent, ncol = 4) + 
-  labs(x = "", 
+a <- ggplot(indices[sensitivity %in% c("Si", "Ti")], aes(parameters, original, fill = sensitivity)) +
+  geom_bar(stat = "identity",
+           position = position_dodge(0.6),
+           color = "black") +
+  geom_errorbar(aes(ymin = low.ci,
+                    ymax = high.ci),
+                position = position_dodge(0.6)) +
+  scale_y_continuous(breaks = pretty_breaks(n = 3)) +
+  facet_wrap(~Continent,
+             ncol = 4) +
+  labs(x = "",
        y = "Sobol' index") +
+  scale_fill_discrete(name = "Sobol' indices",
+                      labels = c(expression(S[italic(i)]),
+                                 expression(T[italic(i)]))) +
+  theme_AP() +
   theme(legend.position = "none")
 
 
-b <- plot_sobol(ci, type = 1, dummy = ci.dummy) + 
-  facet_wrap(~Continent, ncol = 4) + 
-  labs(x = "", 
+b <- ggplot(indicesR[sensitivity %in% c("Si", "Ti")], aes(parameters, original, fill = sensitivity)) +
+  geom_bar(stat = "identity",
+           position = position_dodge(0.6),
+           color = "black") +
+  geom_errorbar(aes(ymin = low.ci,
+                    ymax = high.ci),
+                position = position_dodge(0.6)) +
+  scale_y_continuous(breaks = pretty_breaks(n = 3)) +
+  facet_wrap(~Continent,
+             ncol = 4) +
+  labs(x = "",
        y = "Sobol' index") +
+  scale_fill_discrete(name = "Sobol' indices",
+                      labels = c(expression(S[italic(i)]),
+                                 expression(T[italic(i)]))) +
+  theme_AP() +
   theme(legend.position = "none")
 
 legend <- get_legend(a + theme(legend.position = "top"))
@@ -953,7 +988,7 @@ plot_grid(legend, all, ncol = 1,  rel_heights = c(0.1, 1))
 
 # CHECK SUM OF FIRST-ORDER INDICES --------------------------------------------
 
-lapply(list(ci, ciR), function(x) 
+lapply(list(indices, indicesR), function(x) 
   x[sensitivity == "Si"] %>%
       .[, sum(original), Continent])
 ```
@@ -962,11 +997,23 @@ lapply(list(ci, ciR), function(x)
 
 # PLOT SOBOL' INDICES (SECOND AND THIRD ORDER) --------------------------------
 
-lapply(2:3, function(x) plot_sobol(ci, type = x, dummy = ci.dummy) + 
-         facet_wrap(~Continent, ncol = 2) +
-           labs(x = "", 
-                y = "Sobol' index") +
-         theme(axis.text.x = element_text(size = 7)))
+lapply(c("Sij", "Sijk"), function(x)
+  ggplot(indices[sensitivity == x], aes(reorder(parameters, original), original)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = low.ci, 
+                    ymax = high.ci)) + 
+  facet_wrap(~Continent) +
+  theme_bw() + 
+  labs(x = "", y = "Sobol' index") + 
+  geom_hline(yintercept = 0, lty = 2, color = "red") + 
+  theme(panel.grid.major = element_blank(), 
+        panel.grid.minor = element_blank(), 
+        legend.background = element_rect(fill = "transparent", 
+                                         color = NA), 
+        legend.key = element_rect(fill = "transparent", 
+                                  color = NA), 
+        axis.text.x = element_text(angle = 45, 
+                                   hjust = 1)))
 ```
 
 \clearpage
@@ -979,5 +1026,18 @@ lapply(2:3, function(x) plot_sobol(ci, type = x, dummy = ci.dummy) +
 
 sessionInfo()
 
+## Return the machine CPU
+cat("Machine: "); print(get_cpu()$model_name)
+
+## Return number of true cores
+cat("Num cores: "); print(detectCores(logical = FALSE))
+
+## Return number of threads
+cat("Num threads: "); print(detectCores(logical = TRUE))
+
+## Return the machine RAM
+cat("RAM: "); print (get_ram()); cat("\n")
+
 ```
+
 # References
